# hermes

./: .env.dist  Cargo.toml  README.md  Rocket.toml  docker-compose.yml
.github/workflows/: rust.yml
docs/: mindmap.mmd  specs.md  tasks.md
src/: main.rs
src/commands/: add_api_user_command.rs  dump_cache_command.rs  mod.rs  remove_api_user_command.rs  scan_sites_command.rs  test_command.rs
src/controllers/: api.rs  app.rs  mod.rs  site_server.rs
src/core/: bootstrap.rs  cache.rs  catcher.rs  cipher.rs  cli.rs  database.rs  exit_codes.rs  mod.rs  response.rs  rocket_factory.rs  validation.rs
src/core/commands/: command_registry.rs  command_trait.rs  command_utils.rs  mod.rs
src/core/fairings/: load_site_names_in_cache.rs  mod.rs
src/core/guards/: api_user_guard.rs  mod.rs  origin_host_guard.rs
src/core/macros/: exit.rs  http.rs  mod.rs
src/middlewares/: api_user_middleware.rs  command_middleware.rs  mod.rs  site_access_middleware.rs  site_middleware.rs  user_middleware.rs
src/middlewares/impls/: mod.rs  model_middleware_trait.rs
src/model/: api_user.rs  command_log.rs  mod.rs  site.rs  site_access.rs  user.rs
src/model/impls/: mod.rs  model_trait.rs
src/model/utils/: app_status.rs  mod.rs
src/templates/: error.html
